--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,17 @@
+<!--
+ * @Author: L·W
+ * @Date: 2024-04-25 17:07:25
+ * @LastEditors: L·W
+ * @LastEditTime: 2024-05-31 15:37:39
+ * @Description: Description
+-->
 <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>1</title>
+    <title>在线聊天室</title>
   </head>
   <body>
     <div id="root"></div>
